# rasterrocket

./: CHANGELOG.md  Cargo.toml  README.md  ROADMAP.md  deny.toml  release.toml
crates/bench/: Cargo.toml
crates/cli/: Cargo.toml
crates/encode/: Cargo.toml
crates/encode/src/: jpeg.rs  lib.rs
crates/font/: Cargo.toml
crates/gpu/: Cargo.toml
crates/pdf_bridge/: Cargo.toml
crates/pdf_interp/: Cargo.toml
crates/pdf_raster/: Cargo.toml
crates/pdf_raster/src/: gcv.rs  lib.rs  render.rs
crates/pdf_raster/tests/: lazy_session.rs
crates/raster/: Cargo.toml
docs/: api-reference.md
wiki/: LLM-Vision-OCR-Integration.md
