[workspace]
resolver = "2"
exclude = ["fuzz", "qa"]
members = [
    "crates/color",
    "crates/raster",
    "crates/encode",
    "crates/font",
    "crates/pdf",
    "crates/pdf_bridge",
    "crates/pdf_interp",
    "crates/pdf_raster",
    "crates/cli",
    "crates/gpu",
    "crates/bench",
]

[workspace.package]
version     = "1.1.0"
edition     = "2024"
authors     = ["Tom"]
license     = "MIT"
repository  = "https://github.com/pthomasfournet/rasterrocket"
homepage    = "https://crates.io/crates/rasterrocket"
readme      = "README.md"

[workspace.dependencies]
bytemuck   = { version = ">=1.21, <2", features = ["derive"] }
bitflags   = { version = ">=2.0,  <3" }
cc         = { version = ">=1.0,  <2" }
tempfile   = { version = ">=3.0,  <4" }
log        = { version = ">=0.4,  <1" }
env_logger = { version = ">=0.11, <1" }
# Phase 9 device-resident image cache (gpu/cache feature).
blake3     = { version = ">=1.5,  <2" }
dashmap    = { version = ">=6.0,  <7" }

[workspace.lints.rust]
unsafe_code          = "deny"
missing_docs         = "warn"
unused_results       = "warn"

[workspace.lints.clippy]
all      = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery  = { level = "warn", priority = -1 }

[profile.release]
opt-level      = 3
lto            = "thin"
codegen-units  = 1
strip          = "symbols"
panic          = "abort"

[profile.profiling]
inherits   = "release"
debug      = 1
strip      = "none"

