[package]
publish = false
name    = "bench"
version = "1.1.0"
edition = "2024"

[[bin]]
name = "bench"
path = "src/main.rs"

[[bin]]
name = "contest_v11"
path = "src/contest_v11/main.rs"

[dependencies]
raster     = { package = "rasterrocket-render", path = "../raster" }
color      = { package = "rasterrocket-color",  path = "../color" }
encode     = { package = "rasterrocket-encode", path = "../encode" }
pdf        = { package = "rasterrocket-parser", path = "../pdf" }
pdf_interp = { package = "rasterrocket-interp", path = "../pdf_interp" }
pdf_raster = { package = "rasterrocket",        path = "../pdf_raster" }
vello_cpu  = "0.0.7"

[target.'cfg(target_os = "linux")'.dependencies]
rustix = { version = "1", features = ["fs"] }

[lints.rust]
unsafe_code  = "deny"
missing_docs = "allow"

[lints.clippy]
all      = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
