[package]
name        = "rasterrocket-cli"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true
homepage.workspace   = true
readme.workspace     = true
description = "CLI — renders PDF pages to pixel files. Drop-in pdftoppm replacement. Pure Rust, zero Poppler."
keywords    = ["pdf", "raster", "cli", "pdftoppm", "renderer"]
categories  = ["command-line-utilities", "multimedia::images", "rendering"]

[[bin]]
name = "rrocket"
path = "src/main.rs"

[features]
# Build FreeType from source (cross-compilation, static builds).
bundled = ["pdf_raster/bundled"]
# GPU features pull the path-only internal `rasterrocket-gpu` crate (publish = false)
# and are not available on crates.io.  Each feature forwards to the matching
# pdf_raster feature, which in turn wires to `dep:gpu` and the gpu-crate feature.
nvjpeg           = ["pdf_raster/nvjpeg"]
nvjpeg2k         = ["pdf_raster/nvjpeg2k"]
vaapi            = ["pdf_raster/vaapi"]
gpu-aa           = ["pdf_raster/gpu-aa"]
gpu-icc          = ["pdf_raster/gpu-icc"]
gpu-deskew       = ["pdf_raster/gpu-deskew"]
cache            = ["pdf_raster/cache"]
vulkan           = ["pdf_raster/vulkan"]
gpu-jpeg-huffman = ["pdf_raster/gpu-jpeg-huffman"]
gpu-validation   = ["pdf_raster/gpu-validation"]

[dependencies]
pdf_raster  = { package = "rasterrocket",        path = "../pdf_raster", version = "1.1" }
encode      = { package = "rasterrocket-encode", path = "../encode",     version = "1.1" }
color       = { package = "rasterrocket-color",  path = "../color",      version = "1.1" }
raster      = { package = "rasterrocket-render", path = "../raster",     version = "1.1" }
clap        = { version = "4", features = ["derive"] }
rayon       = "1"
log         = { workspace = true }
env_logger  = { workspace = true }
mimalloc    = { version = "0.1", default-features = false }

[dev-dependencies]
tempfile = { workspace = true }

[lints.rust]
# cli binary: unsafe_code only allowed in pdf_bridge (the FFI crate)
unsafe_code    = "deny"
missing_docs   = "allow"   # binary crate; public docs are not required
unused_results = "warn"

[lints.clippy]
all      = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery  = { level = "warn", priority = -1 }
