[package]
publish = false
name             = "rasterrocket-encode"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true
homepage.workspace   = true
readme.workspace     = true
description          = "PPM/PGM/PBM/PNG output for the rasterrocket PDF renderer"
keywords             = ["pdf", "ppm", "png", "encode", "image"]
categories           = ["multimedia::images", "encoding"]

[dependencies]
color  = { package = "rasterrocket-color",  path = "../color",  version = "1.0" }
raster = { package = "rasterrocket-render", path = "../raster", version = "1.0" }

# PNG output — pure Rust, no system libs required.
png = "0.17"

# JPEG output — pure Rust, no system libs. (MIT OR Apache-2.0) AND IJG.
jpeg-encoder = "0.7"

[lints]
workspace = true
