[package]
publish = false
name    = "rasterrocket-gpu"
version = "1.1.0"
edition = "2024"

[[bin]]
name = "threshold_bench"
path = "src/bin/threshold_bench.rs"

[features]
# Enable GPU-accelerated JPEG decoding via NVIDIA nvJPEG.
# Requires libnvjpeg.so to be present at link time (ships with CUDA 12).
nvjpeg = []
# Enable GPU-accelerated JPEG 2000 decoding via NVIDIA nvJPEG2000.
# Requires libnvjpeg2k.so at link time. Install location depends on the
# CUDA toolkit major version: /usr/lib/x86_64-linux-gnu/libnvjpeg2k/13/
# for CUDA 13 packages, /usr/lib/x86_64-linux-gnu/libnvjpeg2k/12/ for
# CUDA 12. build.rs probes both, preferring 13.
nvjpeg2k = []
# Enable GPU rotation via CUDA NPP nppiRotate_8u_C1R_Ctx.
# Requires libnppig.so + libnppc.so + libcudart.so (all ship with CUDA 12).
gpu-deskew = []
# Enable GPU vs CPU parity tests (requires a CUDA device at test time).
# cargo test -p gpu --lib --features gpu-validation -- aa_fill_gpu_vs_cpu
gpu-validation = []
# Enable VA-API hardware JPEG decoding for AMD/Intel iGPU and discrete GPU on Linux.
# Requires libva.so.2 and libva-drm.so.2 (Mesa / intel-media-driver).
vaapi = []
# Enable the custom on-GPU JPEG pipeline (Weißenberger 2018 self-synchronizing
# parallel Huffman + GPU IDCT/colour). Currently CPU-only Phase 0; GPU phases
# land incrementally. Disabled by default until the bench gate in
# docs/superpowers/specs/2026-05-06-gpu-jpeg-pipeline.md passes.
nvjpeg-gpu = []
# Probe `NVJPEG_BACKEND_HARDWARE` (fixed-function NVJPG engine) instead of
# `NVJPEG_BACKEND_GPU_HYBRID`. Default (off) reflects the v0.6.0 baseline
# claim that consumer Blackwell's single NVJPG engine serialises 24-thread
# workloads. This flag exists so we can measure rather than assume.
nvjpeg-hardware = ["nvjpeg"]
# Phase 9 device-resident image cache (VRAM tier today; host RAM and disk
# tiers land in tasks 3 and 5).  Pulls in blake3 (content hashing) and
# dashmap (concurrent dual-key indexing).
cache = ["dep:blake3", "dep:dashmap"]
# Phase 10 Vulkan compute backend.  Compiles `.slang` kernels to SPIR-V
# at build time via `slangc` (LunarG SDK), pulls in `ash` for runtime
# Vulkan, and exposes `VulkanBackend` implementing `GpuBackend`.
vulkan = ["dep:ash", "dep:gpu-allocator"]
# Custom parallel-Huffman GPU JPEG decoder (Weißenberger & Schmidt 2021).
# CPU-only scaffolding today (bitstream pack, codetable build, scalar
# reference decoder, synthetic oracle); GPU dispatch lands once the
# `GpuBackend` trait grows transfer + compute-kernel surfaces.
gpu-jpeg-huffman = []

[dependencies]
cudarc   = { version = "0.19", features = ["cuda-12080"] }
color    = { package = "rasterrocket-color", path = "../color" }
log      = "0.4"
bytemuck = { workspace = true }
blake3   = { workspace = true, optional = true }
dashmap  = { workspace = true, optional = true }
# Pin to a single 0.38.x to avoid surprise ABI breaks across cargo updates;
# ash bumps minor on every Vulkan SDK release.
ash      = { version = "0.38", optional = true, default-features = false, features = ["loaded"] }
# Pure-Rust slab sub-allocator on top of ash.  No C/C++ FFI; same crate
# wgpu uses for its Vulkan backend.  Default features pull in d3d12 +
# metal which we don't need.
gpu-allocator = { version = "0.28", optional = true, default-features = false, features = ["std", "vulkan"] }

[dev-dependencies]
# Disk-tier tests want isolated cache dirs.
tempfile = { workspace = true }
# Pixel-level oracle for JPEG decode parity tests (already resolved in
# the workspace lockfile via raster/image transitive deps).
zune-jpeg = "0.5"

# unsafe_code must be "allow" here because cudarc requires unsafe blocks.
# We do not inherit workspace lints so we can override unsafe_code.
[lints.rust]
unsafe_code      = "allow"
missing_docs     = "warn"
unused_results   = "warn"

[lints.clippy]
all      = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery  = { level = "warn", priority = -1 }
