[package]
publish = false
name    = "pdf_bridge"
version = "1.1.0"
edition = "2024"
build   = "build.rs"

[dependencies]
color = { package = "rasterrocket-color", path = "../color" }
log   = { workspace = true }

[build-dependencies]
cc = { workspace = true }

[lints.rust]
# pdf_bridge wraps C++ via extern "C"; unsafe is unavoidable in sys.rs.
unsafe_code      = "allow"
missing_docs     = "warn"
unused_results   = "warn"

[lints.clippy]
all      = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery  = { level = "warn", priority = -1 }
