[package]
publish = false
name        = "rasterrocket-interp"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true
homepage.workspace   = true
readme.workspace     = true
description = "Native PDF content-stream interpreter — poppler-free render path for rasterrocket"
keywords    = ["pdf", "interpreter", "renderer", "fonts", "images"]
categories  = ["parser-implementations", "rendering", "multimedia::images"]

[features]
# Build FreeType from source (cross-compilation, static builds).
bundled = ["font/bundled"]
# GPU features pull the path-only internal `rasterrocket-gpu` crate (publish = false)
# and are not available on crates.io.  Each feature activates `dep:gpu` so the
# optional dependency is linked, then forwards to the matching gpu-crate feature
# (where one exists).
# `gpu-aa` and `gpu-icc` have no matching gpu-crate feature — they gate code that
# calls into the gpu crate's default (no-feature) surface (`GpuCtx`, fill thresholds).
nvjpeg           = ["dep:gpu", "gpu/nvjpeg"]
nvjpeg2k         = ["dep:gpu", "gpu/nvjpeg2k"]
vaapi            = ["dep:gpu", "gpu/vaapi"]
gpu-aa           = ["dep:gpu"]
gpu-icc          = ["dep:gpu"]
cache            = ["dep:gpu", "gpu/cache"]
vulkan           = ["dep:gpu", "gpu/vulkan", "dep:bytemuck", "gpu-aa"]
gpu-jpeg-huffman = ["dep:gpu", "gpu/gpu-jpeg-huffman"]

[dependencies]
gpu      = { package = "rasterrocket-gpu",    path = "../gpu",    optional = true, default-features = false }
bytemuck = { workspace = true, optional = true }
raster = { package = "rasterrocket-render", path = "../raster", version = "1.1" }
color  = { package = "rasterrocket-color",  path = "../color",  version = "1.1" }
font   = { package = "rasterrocket-font",   path = "../font",   version = "1.1" }
encode = { package = "rasterrocket-encode", path = "../encode", version = "1.1" }
pdf    = { package = "rasterrocket-parser", path = "../pdf",    version = "1.1" }
log    = { workspace = true }
fax = "0.2.6"
hayro-ccitt = "0.3.0"
zune-jpeg = "0.5.15"
zune-core = "0.5.1"
jpeg2k      = { version = "0.10.1", default-features = false, features = ["image", "openjpeg-sys"] }
hayro-jbig2 = { version = "0.3.0", default-features = false }
moxcms = "0.8.1"

[dev-dependencies]
env_logger       = { workspace = true }


[lints.rust]
unsafe_code     = "deny"
missing_docs    = "warn"
unused_results  = "warn"  # parity with workspace defaults; the local block overrides them
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fuzzing)'] }

[lints.clippy]
all      = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery  = { level = "warn", priority = -1 }
