[package]
name        = "rasterrocket"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true
homepage.workspace   = true
readme.workspace     = true
description = "PDF to pixel buffer — pure Rust, zero Poppler. For the CLI tool: cargo install rasterrocket-cli"
keywords    = ["pdf", "raster", "ocr", "renderer", "vulkan"]
categories  = ["multimedia::images", "rendering", "parser-implementations"]

[features]
# Build FreeType from source (cross-compilation, static builds).
bundled = ["pdf_interp/bundled"]
# GPU features pull the path-only internal `rasterrocket-gpu` crate (publish = false)
# and are not available on crates.io.  Each feature activates `dep:gpu` so the
# optional dependency is linked, then forwards to the matching gpu-crate feature
# (where one exists) and the corresponding pdf_interp feature.
# `gpu-aa` and `gpu-icc` have no matching gpu-crate feature — they gate code that
# calls into the gpu crate's default (no-feature) surface (`GpuCtx`, fill thresholds).
nvjpeg           = ["dep:gpu", "gpu/nvjpeg",           "pdf_interp/nvjpeg"]
nvjpeg2k         = ["dep:gpu", "gpu/nvjpeg2k",         "pdf_interp/nvjpeg2k"]
vaapi            = ["dep:gpu", "gpu/vaapi",             "pdf_interp/vaapi"]
gpu-aa           = ["dep:gpu",                          "pdf_interp/gpu-aa"]
gpu-icc          = ["dep:gpu",                          "pdf_interp/gpu-icc"]
gpu-deskew       = ["dep:gpu", "gpu/gpu-deskew"]
cache            = ["dep:gpu", "gpu/cache",             "pdf_interp/cache"]
vulkan           = ["dep:gpu", "gpu/vulkan",            "pdf_interp/vulkan"]
gpu-jpeg-huffman = ["dep:gpu", "gpu/gpu-jpeg-huffman",  "pdf_interp/gpu-jpeg-huffman"]
gpu-validation   = ["dep:gpu", "gpu/gpu-validation"]

[dependencies]
gpu         = { package = "rasterrocket-gpu",         path = "../gpu",        optional = true, default-features = false }
pdf_interp  = { package = "rasterrocket-interp",  path = "../pdf_interp", version = "1.0" }
raster      = { package = "rasterrocket-render",  path = "../raster",     version = "1.0" }
color       = { package = "rasterrocket-color",   path = "../color",      version = "1.0" }
encode      = { package = "rasterrocket-encode",  path = "../encode",     version = "1.0" }
base64      = "0.22"
pdf         = { package = "rasterrocket-parser",  path = "../pdf",        version = "1.0" }
rayon       = "1"
log         = { workspace = true }

[lints.rust]
unsafe_code    = "warn"   # deskew rotate may need unsafe for SIMD; explicit allow per site
missing_docs   = "warn"
unused_results = "warn"

[lints.clippy]
all      = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery  = { level = "warn", priority = -1 }
