[package]
publish = false
name             = "rasterrocket-render"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true
homepage.workspace   = true
readme.workspace     = true
description          = "Software rasterizer — path fill, compositing, and AVX-512/AVX2/NEON SIMD for the rasterrocket PDF renderer"
keywords             = ["pdf", "raster", "simd", "renderer", "avx512"]
categories           = ["rendering", "multimedia::images"]

[features]
default     = ["simd-avx2"]
simd-avx2   = []                   # AVX2 blend / fill paths
simd-avx512 = ["simd-avx2"]       # adds vpopcntq AA counter (requires avx512vpopcntdq)
nightly-sve2 = []                  # SVE2 popcount tier (aarch64 only; requires nightly + stdarch_aarch64_sve)
rayon       = ["dep:rayon"]        # tile-level rayon parallelism for fill

[dependencies]
color    = { package = "rasterrocket-color", path = "../color", version = "1.1" }
bytemuck = { workspace = true }
bitflags = { workspace = true }
rayon    = { version = "1", optional = true }

[lints]
workspace = true
